# seq-data-file

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: run.rs
src/: format.rs  ioutils.rs  lib.rs
src/nonblocking/: mod.rs
