[package]
name = "seq-data-file"
version = "0.1.1"
edition = "2021"
license = "MIT/Apache-2.0"
authors = ["Vincent Hanquez <vincent@typed.io>"]
homepage = "https://github.com/vincenthz/seq-data-file/"
repository = "https://github.com/vincenthz/seq-data-file/"
description = "simple sequential data file"
keywords = ["file", "format", "archive"]
categories = ["filesystem"]

[dependencies]
tokio = { version = "1", optional = true, features = ["fs", "io-util"] }

[features]
default = ["async"]
async = ["dep:tokio"]

[[example]]
name = "run"
